# free-genai-bootcamp-2025

./: .gitattributes  LICENSE  README.md  docker-compose.yml
docker/: README.md  (+2 more)
lang-portal/backend-fastapi/: alembic.ini  pyproject.toml
lang-portal/backend-fastapi/alembic/: alembic.ini  env.py
lang-portal/backend-fastapi/alembic/versions/: 20250213_2020_be4ef40d2c7f_initial_migration_create_all_tables.py  20250217_0400_update_sessions_and_activities.py
lang-portal/backend-fastapi/app/: main.py
lang-portal/backend-fastapi/app/core/: config.py  database.py  exceptions.py
lang-portal/backend-fastapi/app/crud/: activity.py  base.py  group.py  session.py  study_session.py  word.py
lang-portal/backend-fastapi/app/models/: __init__.py  activity.py  base.py  group.py  session.py  study_activity.py  study_session.py  word.py  word_group.py  word_review_item.py
lang-portal/backend-fastapi/app/schemas/: activity.py  base.py  group.py  session.py  study_session.py  word.py
lang-portal/backend-fastapi/app/services/: activity_service.py  group_service.py  session_service.py  study_service.py  word_service.py
lang-portal/backend-fastapi/seed/: activities.json  groups.json  study_activities.json  word_groups.json
lang-portal/backend-fastapi/tests/: conftest.py
lang-portal/backend-fastapi/tests/fixtures/: test_data.py
lang-portal/backend-fastapi/tests/test_crud/: test_activity_crud.py  test_group_crud.py  test_session_crud.py  test_study_session_crud.py  test_word_crud.py
lang-portal/backend-fastapi/tests/test_db/: conftest.py  test_integration.py
lang-portal/backend-fastapi/tests/test_models/: conftest.py  test_activity_model.py  test_group_model.py  test_session_model.py  test_study_activity_model.py  test_study_session_model.py  test_word_model.py  test_word_review_item_model.py
lang-portal/backend-fastapi/tests/test_schemas/: conftest.py  test_activity_schema.py  test_base_schema.py  test_group_schema.py  test_session_schema.py  test_study_session_schema.py  test_word_schema.py
lang-portal/backend-fastapi/tests/test_services/: conftest.py  test_activity_service.py  test_group_service.py  test_session_service.py  test_study_service.py  test_word_service.py
listening-comp/: .cursor-env  .cursorignore  .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
listening-comp/.streamlit/: config.toml
listening-comp/backend/: __init__.py  audio_processor.py  db.py  utils.py
listening-comp/data/: app.json
listening-comp/dev/: Audio Content Samples.md
listening-comp/docs/: Action-Plan.md  Database-Schema.md  Frontend-Design.md  Prompts.md  Technical-Spec.md
listening-comp/docs/reports/: Project-File-Structure.md  Test-Results.md
listening-comp/frontend/: app.py
listening-comp/media/transcripts/: MRJ_Podcast_173.vtt  Reira_Warning_Audio.json  Reira_Warning_Audio.srt  Reira_Warning_Audio.verbose.json  Reira_Warning_Audio.vtt
listening-comp/media/translations/: MRJ_Podcast_173.vtt  Reira_Warning_Audio.vtt
listening-comp/scripts/: manage_db.py  prep_checkin.py  update_docs.py  updateexample.py
listening-comp/tests/: conftest.py  test_audio_processor.py  test_db.py
visual-novel/: .cursorignore  .cursorrules  .env.example  .gitignore  Project-Setup.md  README.md  pyproject.toml
visual-novel/.cursor/rules/: general-all.mdc  general-macos.mdc  general-windows.mdc  project.mdc  python.mdc
visual-novel/app/: dev_iframe.py  main.py  main_new.py
visual-novel/app/api/: __init__.py  llm.py
visual-novel/app/game/: engine.py
visual-novel/app/game/characters/: character.py  teacher.py
visual-novel/app/game/dialog/: manager.py
visual-novel/app/game/scenes/: base.py  intro.py
visual-novel/app/utils/: __init__.py  config.py  database.py  language.py  static.py
visual-novel/data/: vocabulary.json
visual-novel/data/dialog/: intro.json
visual-novel/dev/: README.old.md
visual-novel/docs/: Action-Plan.md  Fallback-Dialog.md  Game-Design.md  Game-LLM-Prompts.md  Image-Asset-Generation.md  PRD.md  Prompt-Notes.md  Prompts.md  Technical-Spec.md
visual-novel/docs/cursorrules/: .cursorrules.windows
visual-novel/docs/features/: Dialog-System.md  Furigana-Integration-Plan.md  Furigana-Ruby-Text.md  LLM-Proxy-Server.md  Phaser-Rewrite.md  Scene-Specific-Reloading.md  Study-Scene-LLM-Integration.md  Study-Scene-Layout.md  Study-Scene.md
visual-novel/docs/read-only/: Feature-Spec-Template.md  Prompt-Header.md  Prompt-Notes.md  Prompts.md
visual-novel/docs/read-only/archive/: Prompts01.md
visual-novel/docs/reference/: Client-Side-LLM-Security-Risks.md  Express-LLM-Proxy.md  Japanese-Text-Line-Breaking.md  LLM-Integration-Usage.md  OpenAI-Library.md  Streamlit-Phaser-Howto.md
visual-novel/docs/reports/: Project-File-Structure.md  Test-Results.md
visual-novel/docs/submission/: AI-Lessons.md  Docker-Deliverables.md  Past-Submissions.md  Prompts.md  final_submission_transcript.txt
visual-novel/docs/submission/ai-lessons/: AI-Lessons-Max.md  AI-Lessons-Raw.md  AI-Lessons-Refined.md  AI-Lessons-Reorganized.md
visual-novel/docs/submission/final/: Submission-Task.md  youtube_transcript_dl.py
visual-novel/docs/submission/prompts/: 2-listening-comp-prompts.md  3-opea-comps-prompts.md  4-visual-novel-prompts.md
visual-novel/docs/submission/rules/: 1-lang-portal-cursorrules.txt  2-listening-comp-cursorrules.txt  (+1 more)
visual-novel/phaser_game/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
visual-novel/phaser_game/src/: hmr-test.ts  index.ts
visual-novel/phaser_game/tests/: FuriganaRenderer.test.ts
visual-novel/scripts/: build_game.py  cleanup-dev.sh  dev.sh  run-phaser-dev.sh  run_app.py  start-dev-with-proxy.sh  start-dev.sh  update_docs.py  watch-phaser.sh  watch-streamlit.sh
visual-novel/server/: .env.example  README.md  package-lock.json  package.json  server.js
visual-novel/static/: index.html  phaser-game.html
visual-novel/static/css/: game.css  style.css
visual-novel/static/js/: game.js  phaser-game.js
visual-novel/tests/: conftest.py  test_game_engine.py  test_language_utils.py
(+263 files in other folders)
